--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,24 @@ examples
 venv/
 *.pdf
 
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+*.egg
+
 # Ignore image files
 *.jpg
 *.jpeg
