--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy==1.26.1
 tensordict==0.2.1
 torch==2.1.0
 torchrl==0.2.1
+torchdiffeq==0.2.4
 tqdm==4.66.1
 typing_extensions==4.8.0
 vmas==1.4.1
