--- a/sigmarl/config.json
+++ b/sigmarl/config.json
@@ -45,6 +45,5 @@
     "is_observe_ref_path_other_agents": false,
     "is_using_opponent_modeling": false,
     "is_using_prioritized_marl": false,
-    "prioritization_method": "random",
-    "is_using_cbf": false
+    "prioritization_method": "random"
 }
