--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ share/python-wheels/
 # VectorizedMultiAgentSimulator
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
