--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ stages:
 test_job:
   stage: test
   image: python:3.12
+  variables:
+    CICD_TESTING: "true"
   before_script:
     - pip install -r requirements.txt
   script:
